@@ -282,6 +282,7 @@ type).
 .so lib/dpif-netdev-unixctl.man
 .so lib/dpif-netlink-unixctl.man
 .so lib/netdev-dpdk-unixctl.man
+.so lib/odp-execute-unixctl.man
 .so ofproto/ofproto-dpif-unixctl.man
 .so ofproto/ofproto-unixctl.man
 .so lib/vlog-unixctl.man
